- Dark theme fix: report item attributes were unreadable (bad background hover color) - Dark theme fix: white text on white background + unified richtextbox components - Dark theme fix: initial help text in richtextbox was unreadable (bad color) - Dark theme fix: fixed white color on tollbars - Dark theme fix: keyboard shorcuts - Unified richtextbox toolbars (same order of tools) - Deduplicate styles in centralize.css

--- a/src/gui/src/assets/common.css
+++ b/src/gui/src/assets/common.css
@@ -57,3 +57,7 @@
     background-color: #f8f8f8;
     box-shadow: -3px 0 0 #6abef2;
 }
+
+#app.theme--dark .valueHolder:hover {
+    background-color: #252931;
+}
